<?xml version="1.0"?>
<package>
  <name>h264_image_transport</name>
  <version>0.0.0</version>
  <description>The h264_image_transport package</description>

  <maintainer email="adl@ut.ee"> University of Tartu Autonomous Driving Lab</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>libx264-dev</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>libx264-dev</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <image_transport plugin="${prefix}/h264_plugins.xml" />
  </export>
</package>
