<?xml version="1.0"?>
<package>
    <name>gst_image_transport</name>
    <version>0.0.1</version>
    <description>The h264_image_transport package</description>

    <maintainer email="adl@ut.ee">University of Tartu Autonomous Driving Lab</maintainer>
    <author email="maxandre.ogeret@mogrobotics.com">Maxandre Ogeret</author>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>

    <run_depend>cv_bridge</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>sensor_msgs</run_depend>


    <!-- GStreamer -->
    <build_depend>libgstreamer1.0-dev</build_depend>
    <run_depend>gstreamer1.0-plugins-bad</run_depend>

    <export>
        <image_transport plugin="${prefix}/image_transport_plugins.xml"/>
    </export>
</package>
