<?xml version="1.0"?>
<package format="2">
  <name>h264_image_transport_msgs</name>
  <version>1.14.0</version>
  <description>Messages for h264_image_transport</description>
  <maintainer email="maxandre.ogeret@ut.ee">syouji</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
